# learning-rust

./: README.md  docker-compose.yml
Higher-rank-Trail-Bounds/: readme.md
array/: Cargo.toml  main.rs
axum-api/: Cargo.toml
axum-api/src/: error.rs  main.rs  web.rs
axum-api/src/middleware/: main_response_mapper.rs  mod.rs
axum-api/src/routes/: hello.rs  login.rs  mod.rs  static_route.rs
axum-api/tests/: http.rs
borrowing/: readme.md
box/: main.rs
casting/: main.rs
closures/: main.rs
dereferencing/: readme.md
derive/: readme.md
enum/: main.rs
function/: main.rs
generic/: main.rs
hashmap/: main.rs
hello-world/: main  main.rs
io/: main.rs
iterators/: main.rs
lifetime/: readme.md
match/: main.rs
module/: Cargo.toml
module/src/: main.rs
module/src/restaurant/: mod.rs
name/: main.rs
numbers/: main.rs
orphan-rule/: readme.md
owner-ship/: main.rs
ownership/: readme.md
patterns/ExtensionTrails/: Cargo.toml  readme.md
patterns/ExtensionTrails/src/: main.rs
patterns/TypeStateBuilder /: readme.md
rc/: main.rs
rust_tutorial/src/: main.rs
string/: main.rs
struct/: main.rs
thread/: main.rs
trait/: main.rs
tuple/: main.rs
vector/: main.rs
