[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
axum = "0.7.5"
tower-http = { version = "0.5", features = ["full"]}
tower-cookies = "0.10"
httpc-test = "0.1.10"
serde = "1.0.210"
serde_json = "1.0.128"

lazy-regex = "3"
strum_macros = "0.25"
uuid = {version = "1", features = ["v4","fast-rng",]}
tower = "0.5.1"
serde_with = "3.9.0"
bson = "2.12.0"
[dev-dependencies]
anyhow = "1.0.44"
httpc-test = "0.1.10"
 